--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,8 +28,8 @@ jobs:
           docker push public.ecr.aws/k7y1q1q5/yashrepo:latest
 
       - name: Configure kubectl
-        run: aws eks update-kubeconfig --name aditya
+        run: aws eks update-kubeconfig --name yashrepo
 
 
       - name: Deploy to EKS
-        run: kubectl apply -f resources.yaml --v=10
+        run: kubectl apply -f resources.yaml
