--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
          docker push public.ecr.aws/k7y1q1q5/yashrepo:latest
 
     - name: Update kube config
-      run: aws eks update-kubeconfig --name aditya
+      run: aws eks --region ca-central-1 update-kubeconfig --name aditya
     
     - name: Deploy to EKS
       run: |
