--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,9 +25,16 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-east-2
 
+    - name: Install kubectl
+      uses: azure/setup-kubectl@v2.0
+      with:
+       version: 'v1.24.0' # Make sure this version is compatible with your EKS cluster
+       id: install
+    
     - name: Login to Amazon ECR
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
+
 
     - name: Build, tag, and push docker image to Amazon ECR
       run: |
