--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,11 +30,6 @@ jobs:
       with:
        version: 'v1.24.0' # Make sure this version is compatible with your EKS cluster
        id: install
-    
-    - name: Login to Amazon ECR
-      id: login-ecr
-      uses: aws-actions/amazon-ecr-login@v1
-
 
     - name: Build, tag, and push docker image to Amazon ECR
       run: |
@@ -47,5 +42,4 @@ jobs:
       run: aws eks --region ca-central-1 update-kubeconfig --name aditya
     
     - name: Deploy to EKS
-      run: |
-        kubectl apply -f resources.yaml
+      run: kubectl apply -f resources.yaml
