--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,45 +1,34 @@
-name: Node js app deploy to EKS
+name: Deploy to EKS
+
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches:
+      - 'main'
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Install kubectl
-      uses: azure/setup-kubectl@v2.0
-      with:
-        version: 'v1.24.0' # default is latest stable
-      id: install
+      - name: Set up AWS CLI
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ca-central-1
 
-    - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: us-east-2
+      - name: Build and push Docker image to ECR
+        run: |
+         aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws/k7y1q1q5
+          docker build -t your-ecr-repo:latest .
+          docker tag yashrepo:latest public.ecr.aws/k7y1q1q5/yashrepo:latest
+          docker push public.ecr.aws/k7y1q1q5/yashrepo:latest
 
-    - name: Install kubectl
-      uses: azure/setup-kubectl@v2.0
-      with:
-       version: 'v1.24.0' # Make sure this version is compatible with your EKS cluster
-       id: install
+      - name: Configure kubectl
+        run: aws eks --region ca-central-1 update-kubeconfig --name aditya
 
-    - name: Build, tag, and push docker image to Amazon ECR
-      run: |
-        aws ecr-public get-login-password --region us-east-1 | docker login --username AWS --password-stdin public.ecr.aws/k7y1q1q5
-         docker build -t yashrepo .
-         docker tag yashrepo:latest public.ecr.aws/k7y1q1q5/yashrepo:latest
-         docker push public.ecr.aws/k7y1q1q5/yashrepo:latest
-
-    - name: Update kube config
-      run: aws eks --region ca-central-1 update-kubeconfig --name aditya
-    
-    - name: Deploy to EKS
-      run: kubectl login | kubectl apply -f resources.yaml
+      - name: Deploy to EKS
+        run: kubectl apply -f resources.yaml
